# bandeja-ros-src

./: .gitmodules  README.md
data_collection/: package.xml
data_collection/config/: basler_intrinsics_calibration.yaml  pylon_basler.yaml
data_collection/config/calibration/: so3_to_quat.py
data_collection/launch/: azure.launch  azure_view.launch  basler.launch  basler_view.launch  data_collection.launch  data_collection_ns.launch  mcu-imu_ns.launch
data_collection/rosbag_scripts/: record_all.sh  record_imu.sh
mcu_interface/: CMakeLists.txt  package.xml
mcu_interface/cfg/: mcu_interface.cfg
mcu_interface/src/: add_two_ints_client.cpp  align_mcu_cam_phase_client.cpp  mcu.cpp  publish_s10_timestamp_client.cpp  publish_s10_to_mcu_offset_client.cpp  start_mcu_cam_trigger_client.cpp
mcu_interface/srv/: AddTwoInts.srv  AlignMcuCamPhase.srv  PublishS10Timestamp.srv  PublishS10ToMcuOffset.srv  StartMcuCamTriggering.srv
